@@ -1,0 +1,5 @@
+-- tbl_created_by_init is supposed to have been created for us
+-- automatically by test_init_file.sql
+
+select * from tbl_created_by_init;
+drop table tbl_created_by_init;
